# ghcid-reload-repro

./: README.md  devenv.nix  myprogram.cabal  stack.yaml
src/: Main.hs
